--- a/index.html
+++ b/index.html
@@ -14,27 +14,76 @@
 <div id="container" align="center">
 	<div id="header">
 		<h1>Yuquan Shan</h1>
-
-		<div id="nav">
-			<a href="index.html">Intro</a> &nbsp; <a href="publications.html">Publications</a> &nbsp; <a href="hobbies.html">Hobbies</a> &nbsp; <a href="contact.html">Contact</a> &nbsp;
-		</div>
+		<h2 id="flashy"></h2>
 	</div>
 
 	<div id="content">
 		<h3>Intro</h3>
 		<p>Greetings, welcome to Yuquan's webpage.</p>
-		<p>I'm a Ph.D. student in the department of Computer Science and Engineering in Penn State, under the supervision of <a href="http://www.cse.psu.edu/~gik2/" target="_blank">Prof. George Kesidis</a>. My current research interests are distributed computation, cloud security, machine learning, power system marketing and optimization.</p>
+		<p>I earned my Ph.D. degree in Computer Science and Engineering in Penn State, under the supervision of <a href="http://www.cse.psu.edu/~gik2/" target="_blank">Prof. George Kesidis</a>. My research interests cover multiple areas including distributed computation, cloud security, machine learning, power system marketing and optimization. (Here is the link to my dblp <a href="https://dblp.uni-trier.de/pers/hd/s/Shan:Yuquan">profile</a>.)</p>
 
-		<p>Before joining Penn State, I graduated from <a href="http://welcome.jnu.edu.cn/en2014/" target="_blank">Jinan University</a> in <a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>, 
-China with a bachelor degree in Electrical Engineering. Please find my <a href="docs/cv_yuquan.pdf" target="_blank">CV</a> for more information regarding my past experience.</p> 
-		<br><p><img src="photo.jpeg"></p>
-  </div>
+		<p>Before joining Penn State, I graduated from <a href="http://welcome.jnu.edu.cn/en2014/" target="_blank">Jinan University</a> in <a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>,
+China with a bachelor degree in Electrical Engineering. Please find my <a href="docs/cv_yuquan.pdf" target="_blank">CV</a> for more information regarding my past experience.</p>
+	</div>
 
-  
+	<div id = "content">
+		<h3>Contact</h3>
+		<p><b>Email - </b>springshan13@gmail.com</p>
+		<p><b>Others - </b><a href="https://github.com/yuquanshan", target=”_blank”>GitHub</a> <a href="https://linkedin.com/in/yuquanshan", target=”_blank”>LinkedIn</a> <a href="https://www.facebook.com/yuquan.shan.1", target=”_blank”>Facebook</a></p>
+	</div>
+
+	<div id = "content">
+		<h3>Hobbies</h3>
+		<p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scroll series, GTA series, The Sims series, Nobunaga's Ambition series.</p>
+		<p><b>Basketball - </b>Bench guy; high school jersey: #13; college jersey: #33.</p>
+		<p><b>Readings - </b> Good way to learn new things as well as fall asleep.</p>
+	</div>
+
+
 	<div id="footer">
-		Last update: 1/20/2018
+		Last update: 12/1/2018
 	</div>
 </div>
+
+<script>
+var i = 0;
+var j = 0;
+const base = 'The dude that is ';
+const doing = ["coding.", "thinking.", "hacking.", "learning.", "wandering.", "sleeping."];
+const padding = 10;
+const speed = 100;
+const pause = 800;
+
+function typewords() {
+	if (j < doing[i].length) {
+		var tmp = base + doing[i].substring(0, ++j);
+		var k;
+		for (k = 0; k < padding - j; k++) {
+			tmp = tmp + "&nbsp;";
+		}
+		document.getElementById("flashy").innerHTML = tmp;
+		setTimeout(typewords, speed);
+	} else {
+		setTimeout(delwords, pause);
+	}
+}
+
+function delwords() {
+	if (j > 0) {
+		var tmp = base + doing[i].substring(0, --j);
+		var k;
+		for (k = 0; k < padding - j; k++) {
+			tmp = tmp + "&nbsp;";
+		}
+		document.getElementById("flashy").innerHTML = tmp;
+		setTimeout(delwords, speed);
+	} else {
+		i = (i + 1) % doing.length
+		setTimeout(typewords, pause);
+	}
+}
+typewords()
+</script>
 
 </body>
 </html>
