--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ China with a bachelor degree in Electrical Engineering. Please find my <a href="
 
 	<div id = "content">
 		<h3>Hobbies</h3>
-		<p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scroll series, GTA series, The Sims series, Nobunaga's Ambition series.</p>
+		<p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scrolls series, GTA series, The Sims series, Nobunaga's Ambition series, Cities: Skylines.</p>
 		<p><b>Basketball - </b>Bench guy; high school jersey: #13; college jersey: #33.</p>
 		<p><b>Readings - </b> Good way to learn new things as well as fall asleep.</p>
 	</div>
@@ -49,8 +49,8 @@ China with a bachelor degree in Electrical Engineering. Please find my <a href="
 var i = 0;
 var j = 0;
 const base = 'The dude that is ';
-const doing = ["coding.", "thinking.", "hacking.", "learning.", "wandering.", "sleeping."];
-const padding = 10;
+const doing = ["discovering.", "coding.", "thinking.", "hacking.", "wondering.", "learning.", "wandering.", "meditating.", "sleeping."];
+const padding = 12;
 const speed = 100;
 const pause = 800;
 
@@ -64,7 +64,11 @@ function typewords() {
 		document.getElementById("flashy").innerHTML = tmp;
 		setTimeout(typewords, speed);
 	} else {
-		setTimeout(delwords, pause);
+		if (i == doing.length - 1) {
+			setTimeout(delwords, pause * 3);
+		} else {
+			setTimeout(delwords, pause);
+		}
 	}
 }
 
