--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ China with a bachelor degree in Electrical Engineering. Please find my <a href="
 	<div id = "content">
 		<h3>Hobbies</h3>
 		<p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scrolls series, GTA series, The Sims series, Nobunaga's Ambition series, Cities: Skylines.</p>
-		<p><b>Basketball - </b>Bench guy; high school jersey: #13; college jersey: #33.</p>
+		<p><b>Basketball - </b>Bench guy; PF/SF/SG; high school jersey: #13; college jersey: #33.</p>
 		<p><b>Readings - </b> Good way to learn new things as well as fall asleep.</p>
 	</div>
 
