--- a/index.html
+++ b/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<link href="style.css" rel="stylesheet" type="text/css" />
-
-	<title>Yuquan Shan</title>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <title>Yuquan Shan</title>
 </head>
 
+
 <body>
-
 <div id="container" align="center">
-	<div id="header">
-		<h1>Yuquan Shan</h1>
-		<h2 id="flashy"></h2>
-	</div>
+    <div id="header">
+        <h1>Yuquan Shan</h1>
+        <h2 id="flashy"></h2>
+    </div>
 
-	<div id="content">
-		<h3>Intro</h3>
-		<p>Greetings, welcome to Yuquan's webpage.</p>
-		<p>I earned my Ph.D. degree in Computer Science and Engineering in Penn State, under the supervision of <a href="http://www.cse.psu.edu/~gik2/" target="_blank">Prof. George Kesidis</a>. My research interests cover multiple areas including distributed computation, cloud security, machine learning, power system marketing and optimization. (Here is the link to my dblp <a href="https://dblp.uni-trier.de/pers/hd/s/Shan:Yuquan">profile</a>.)</p>
+    <div id="content">
+        <h3>Intro</h3>
+        <p>Greetings, welcome to Yuquan's webpage.</p>
+        <p>I earned my Ph.D. degree in Computer Science and Engineering in Penn State, under the supervision of <a href="http://www.cse.psu.edu/~gik2/" target="_blank">Prof. George Kesidis</a>. My research interests cover multiple areas including distributed computation, cloud security, machine learning, power system marketing and optimization. (Here is the link to my dblp <a href="https://dblp.uni-trier.de/pers/hd/s/Shan:Yuquan" target="_blank">profile</a>.)</p>
+        <p>Before joining Penn State, I graduated from <a href="http://welcome.jnu.edu.cn/en2014/" target="_blank">Jinan University</a> in <a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>, China with a bachelor degree in Electrical Engineering. Please find my <a href="docs/cv_yuquan.pdf" target="_blank">CV</a> for more information regarding my past experience.</p>
+    </div>
 
-		<p>Before joining Penn State, I graduated from <a href="http://welcome.jnu.edu.cn/en2014/" target="_blank">Jinan University</a> in <a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>,
-China with a bachelor degree in Electrical Engineering. Please find my <a href="docs/cv_yuquan.pdf" target="_blank">CV</a> for more information regarding my past experience.</p>
-	</div>
+    <div id = "content">
+        <h3>Contact</h3>
+        <p><b>Email - </b>springshan13@gmail.com</p>
+        <p><b>Others - </b><a href="https://github.com/yuquanshan", target=”_blank”>GitHub</a> <a href="https://linkedin.com/in/yuquanshan", target=”_blank”>LinkedIn</a> <a href="https://www.facebook.com/yuquan.shan.1", target=”_blank”>Facebook</a></p>
+    </div>
 
-	<div id = "content">
-		<h3>Contact</h3>
-		<p><b>Email - </b>springshan13@gmail.com</p>
-		<p><b>Others - </b><a href="https://github.com/yuquanshan", target=”_blank”>GitHub</a> <a href="https://linkedin.com/in/yuquanshan", target=”_blank”>LinkedIn</a> <a href="https://www.facebook.com/yuquan.shan.1", target=”_blank”>Facebook</a></p>
-	</div>
+    <div id = "content">
+        <h3>Hobbies</h3>
+        <p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scrolls series, GTA series, The Sims series, Nobunaga's Ambition series, Cities: Skylines.</p>
+        <p><b>Basketball - </b>Bench guy; PF/SF/SG; high school jersey: #13; college jersey: #33.</p>
+        <p><b>Readings - </b> Good way to learn new things as well as fall asleep.</p>
+    </div>
 
-	<div id = "content">
-		<h3>Hobbies</h3>
-		<p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scrolls series, GTA series, The Sims series, Nobunaga's Ambition series, Cities: Skylines.</p>
-		<p><b>Basketball - </b>Bench guy; PF/SF/SG; high school jersey: #13; college jersey: #33.</p>
-		<p><b>Readings - </b> Good way to learn new things as well as fall asleep.</p>
-	</div>
-
-
-	<div id="footer">
-		Last update: 12/1/2018
-	</div>
+    <div id="footer">
+        Last update: 12/1/2018
+    </div>
 </div>
 
 <script>
@@ -55,37 +49,38 @@ const speed = 100;
 const pause = 800;
 
 function typewords() {
-	if (j < doing[i].length) {
-		var tmp = base + doing[i].substring(0, ++j);
-		var k;
-		for (k = 0; k < padding - j; k++) {
-			tmp = tmp + "&nbsp;";
-		}
-		document.getElementById("flashy").innerHTML = tmp;
-		setTimeout(typewords, speed);
-	} else {
-		if (i == doing.length - 1) {
-			setTimeout(delwords, pause * 3);
-		} else {
-			setTimeout(delwords, pause);
-		}
-	}
+    if (j < doing[i].length) {
+        var tmp = base + doing[i].substring(0, ++j);
+        var k;
+        for (k = 0; k < padding - j; k++) {
+            tmp = tmp + "&nbsp;";
+        }
+        document.getElementById("flashy").innerHTML = tmp;
+        setTimeout(typewords, speed);
+    } else {
+        if (i == doing.length - 1) {
+            setTimeout(delwords, pause * 3);
+        } else {
+            setTimeout(delwords, pause);
+        }
+    }
 }
 
 function delwords() {
-	if (j > 0) {
-		var tmp = base + doing[i].substring(0, --j);
-		var k;
-		for (k = 0; k < padding - j; k++) {
-			tmp = tmp + "&nbsp;";
-		}
-		document.getElementById("flashy").innerHTML = tmp;
-		setTimeout(delwords, speed);
-	} else {
-		i = (i + 1) % doing.length
-		setTimeout(typewords, pause);
-	}
+    if (j > 0) {
+        var tmp = base + doing[i].substring(0, --j);
+        var k;
+        for (k = 0; k < padding - j; k++) {
+            tmp = tmp + "&nbsp;";
+        }
+        document.getElementById("flashy").innerHTML = tmp;
+        setTimeout(delwords, speed);
+    } else {
+        i = (i + 1) % doing.length
+        setTimeout(typewords, pause);
+    }
 }
+
 typewords()
 </script>
 
