--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>Greetings, welcome to Yuquan's webpage.</p>
         <p>I earned my Ph.D. degree in Computer Science and Engineering in Penn State, under the supervision of <a href="http://www.cse.psu.edu/~gik2/" target="_blank">Prof. George Kesidis</a>. My research interests cover multiple areas including distributed computation, cloud security, machine learning, power system marketing and optimization. (Here is the link to my dblp <a href="https://dblp.uni-trier.de/pers/hd/s/Shan:Yuquan" target="_blank">profile</a>.)</p>
         <p>Before joining Penn State, I graduated from <a href="https://english.jnu.edu.cn/" target="_blank">Jinan University</a> in <a href="https://en.wikipedia.org/wiki/Guangzhou" target="_blank">Guangzhou</a>, China with a bachelor degree in Electrical Engineering. Please find my <a href="docs/cv_yuquan.pdf" target="_blank">CV</a> for more information regarding my past experience.</p>
+        <p>Regarding my name: The actual pronunciation of my name <i>Yuquan</i> is more close to <i>Yu-chu-an</i> instead of literally <i>Yu-quan</i>. Such spelling-pronunciation mismatch has been troubling me for a long time. So I gave myself an English name - <b>Eugene</b>. Please feel free to use it.</p>
     </div>
 
     <div id = "content">
