--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id = "content">
         <h3>Contact</h3>
         <p id = "email"></p>
-        <p><b>Others - </b><a href="https://github.com/yuquanshan", target=”_blank”>GitHub</a> <a href="https://linkedin.com/in/yuquanshan", target=”_blank”>LinkedIn</a> <a href="https://www.facebook.com/yuquan.shan.1", target=”_blank”>Facebook</a></p>
+        <p><b>Others - </b><a href="https://github.com/yuquanshan", target=”_blank”>GitHub</a> <a href="https://linkedin.com/in/yuquanshan", target=”_blank”>LinkedIn</a> <a href="https://www.facebook.com/yuquan.shan.1", target=”_blank”>Facebook</a> <a href="https://www.instagram.com/yuquan_shan/", target=”_blank”>Instagram</a></p>
     </div>
 
     <div id = "content">
