--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <script>
 var i = 0;
 var j = 0;
-var freeze = false;
+var freeze = true;
 const base = 'The dude that is ';
 const doing = ["discovering.", "coding.", "thinking.", "hacking.", "wondering.", "learning.", "wandering.", "meditating.", "sleeping."];
 const padding = 12;
