--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="container" align="center">
     <div id="header">
         <h1>Yuquan Shan</h1>
-        <h2 id="flashy" onmouseleave="freezeTrue()" onmouseenter="freezeFalse()"></h2>
+        <h2 id="flashy" onmouseleave="freezeTrue()" onmouseenter="freezeFalse()" onclick="activateDDF()"></h2>
     </div>
 
     <div id="content">
@@ -41,63 +41,149 @@
 </div>
 
 <script>
-var i = 0;
-var j = 0;
 var freeze = true;
-const base = 'The dude that is ';
-const doing = ["discovering.", "coding.", "thinking.", "hacking.", "wondering.", "learning.", "wandering.", "meditating.", "sleeping."];
-const padding = 12;
 const speed = 100;
 const pause = 800;
 
-document.getElementById("email").innerHTML = "<b>Email - </b>spr" + doing[1].substring(3, 6) + "sh" + doing[6].substring(1, 3) + "13@gmail.com"
-
-function typewords() {
-    if (j < doing[i].length) {
-        var tmp = base + doing[i].substring(0, ++j);
-        tmp = tmp + "&#x2588"
-        var k;
-        for (k = 0; k < padding - j; k++) {
-            tmp = tmp + "&nbsp;";
-        }
-        document.getElementById("flashy").innerHTML = tmp;
-        setTimeout(typewords, speed);
-    } else {
-        if (i == doing.length - 1) {
-            setTimeout(delwords, pause * 3);
-        } else {
-            setTimeout(delwords, pause);
-        }
-    }
+const PlayMode = {
+  "NORMAL" : 1,
+  "DDF" : 2,
 }
 
-function delwords() {
-    if (j == doing[i].length && freeze) {
-        setTimeout(delwords, speed);
-    } else if (j > 0) {
-        var tmp = base + doing[i].substring(0, --j);
-        tmp = tmp + "&#x2588"
-        var k;
-        for (k = 0; k < padding - j; k++) {
-            tmp = tmp + "&nbsp;";
+class Text {
+  constructor() {
+    this.base = "I'm a geeky dude that enjoys ";
+    this.doing = ["discovering.", "coding.", "thinking.", "hacking.", "wondering.", "learning.", "wandering.",       "meditating.", "sleeping."];
+    this.ddf = "I'm an artist. I'm a performance artist.";
+    this.padding = 50;
+    this.mode = PlayMode.NORMAL; // 0 normal mode, 1 ddf mode
+    this.offset = this.base.length - 1;
+    this.lowerBound = this.base.length - 1;
+    this.deleting = false; // if not deleting then typing
+    this.doingIdx = 0;
+    this.freeze = true;
+    this.aboutToDel = false;
+    this.aboutToTp = true;
+  }
+
+  // TODO(yuquanshan): ugly code, huge space for refactoring
+  genTextAndAdvance() {
+    var tmp = "";
+    if (this.mode == PlayMode.NORMAL) {
+      if (this.offset < this.base.length) {
+        tmp = this.base.substring(0, this.offset + 1);
+      } else {
+        tmp = this.base + this.doing[this.doingIdx].substring(0, this.offset - this.base.length + 1);
+      }
+      tmp = tmp + "&#x2588";
+      var tofill = this.padding - tmp.length;
+      var k;
+      for (k = 0; k < tofill; k++) {
+        tmp = tmp + "&nbsp;";
+      }
+      if (!this.deleting) {
+        if (this.offset == this.base.length + this.doing[this.doingIdx].length - 1 && !this.freeze) {
+          this.deleting = true;
+          this.aboutToDel = true;
+        } else {
+          this.aboutToDel = false;
         }
-        document.getElementById("flashy").innerHTML = tmp;
-        setTimeout(delwords, speed);
+        this.aboutToTp = false;
+        this.offset = Math.min(this.offset + 1, this.base.length + this.doing[this.doingIdx].length - 1)
+      } else {
+        if (this.offset == this.lowerBound) {
+          this.deleting = false;
+          this.doingIdx = (this.doingIdx + 1) % this.doing.length;
+          this.aboutToTp = true;
+        } else {
+          this.aboutToTp = false;
+        }
+        this.offset = Math.max(this.offset - 1, this.lowerBound);
+        this.aboutToDel = false;
+      }
+    } else if (this.mode == PlayMode.DDF) {
+      if (this.deleting) {
+        if (this.offset == 3) {
+          this.deleting = false;
+        }
+        if (this.offset < this.base.length) {
+          tmp = this.base.substring(0, this.offset + 1)
+        } else {
+          tmp = this.base + this.doing[this.doingIdx].substring(0, this.offset - this.base.length + 1)
+        }
+        tmp = tmp + "&#x2588"
+        var tofill = this.padding - tmp.length;
+        var k;
+        for (k = 0; k < tofill; k++) {
+          tmp = tmp + "&nbsp;";
+        }
+        this.offset = Math.max(this.offset - 1, 3);
+      } else {
+        tmp = this.ddf.substring(0, this.offset + 1);
+        tmp = tmp + "&#x2588";
+        var tofill = this.padding - tmp.length;
+        var k;
+        for (k = 0; k < tofill; k++) {
+          tmp = tmp + "&nbsp;";
+        }
+        this.offset = Math.min(this.offset + 1, this.ddf.length - 1);
+      }
+      this.aboutToTp = false;
+      this.aboutToDel = false;
+    }
+    return tmp;
+  }
+
+  get aboutToType() {
+    return this.aboutToTp;
+  }
+
+  get aboutToDelete() {
+    return this.aboutToDel;
+  }
+
+  switchToDDF() {
+    if (this.mode != PlayMode.DDF) {
+      this.mode = PlayMode.DDF;
+      this.deleting = true;
+    }
+  }
+
+  get getDoing() {
+    return this.doing;
+  }
+
+  set setFreeze(i) {
+    this.freeze = i;
+  }
+}
+
+text = new Text();
+
+document.getElementById("email").innerHTML = "<b>Email - </b>spr" + text.getDoing[1].substring(3, 6) + "sh" + text.getDoing[6].substring(1, 3) + "13@gmail.com"
+
+function typewords() {
+    document.getElementById("flashy").innerHTML = text.genTextAndAdvance();
+    if (text.aboutToType || text.aboutToDelete) {
+      setTimeout(typewords, pause);
     } else {
-        i = (i + 1) % doing.length
-        setTimeout(typewords, pause);
+      setTimeout(typewords, speed);
     }
 }
 
 function freezeTrue() {
-  freeze = true;
+  text.setFreeze = true;
 }
 
 function freezeFalse() {
-  freeze = false;
+  text.setFreeze = false;
 }
 
-typewords()
+function activateDDF() {
+  text.switchToDDF();
+}
+
+typewords();
 </script>
 
 </body>
