--- a/index.html
+++ b/index.html
@@ -33,16 +33,18 @@
         <p><b>Computer Games - </b> Here are the games that I feel comfortable to discuss (or debate :P): Dragon Age series, Elder Scrolls series, GTA series, The Sims series, Nobunaga's Ambition series, Cities: Skylines.</p>
         <p><b>Basketball - </b>Bench guy; PF/SF/SG; high school jersey: #13; college jersey: #33.</p>
         <p><b>Readings - </b> Good way to learn new things as well as fall asleep. <a href="docs/vocabook.html"><font color="#FFFFFF">voca</font></a></p>
+        <p><b>Music -  </b> Amateur guitar player. Sometimes pluck for inspiration, aka make noise. My flow: <span id = "genre" onmouseleave="freezeGenre()" onmouseenter="defreezeGenre()"></span></p>
     </div>
 
     <div id="footer">
-        Last update: 12/1/2018
+        Last update: 3/30/2020
     </div>
 </div>
 
 <script>
 var freeze = true;
 const speed = 100;
+const speedFast = 60;
 const pause = 800;
 
 const PlayMode = {
@@ -175,7 +177,54 @@ class Text {
   }
 }
 
+class Genre {
+  constructor() {
+    this.freeze = true;
+    this.words = ["Jamiroquai (funk) and ...", "Kendrick Lamar + 21 Savage (hip-hop) and ...", "The Lumineers (folk rock) and ...", "Kenshi Yonezu (j-pop) and ...", "Vampire Weekend (alter rock) and ..."];
+    this.offset = -1;
+    this.wordsIdx = 0;
+    this.deleting = false;
+    this.pause = false;
+  }
+
+  genTextAndAdvance() {
+    var tmp = ""
+    if (this.deleting) {
+      if (this.offset == -1) {
+        this.pause = true;
+        this.deleting = false;
+        this.wordsIdx = (this.wordsIdx + 1) % this.words.length;
+      } else {
+        this.pause = false;
+      }
+      tmp = this.words[this.wordsIdx].substring(0, this.offset + 1);
+      this.offset = Math.max(-1, this.offset - 1);
+    } else {
+      if (this.offset == this.words[this.wordsIdx].length - 1) {
+        this.pause = true;
+        if (!this.freeze) {
+          this.deleting = true;
+        }
+      } else {
+        this.pause = false;
+      }
+      tmp = this.words[this.wordsIdx].substring(0, this.offset + 1);
+      this.offset = Math.min(this.offset + 1, this.words[this.wordsIdx].length - 1);
+    }
+    return tmp;
+  }
+
+  get shouldPause() {
+    return this.pause;
+  }
+
+  set setFreeze(i) {
+    this.freeze = i;
+  }
+}
+
 text = new Text();
+genre = new Genre();
 
 document.getElementById("email").innerHTML = "<b>Email - </b>spr" + text.getDoing[1].substring(3, 6) + "sh" + text.getDoing[6].substring(1, 3) + "13@gmail.com"
 
@@ -200,7 +249,25 @@ function switchMode() {
   text.switchMode();
 }
 
+function typegenre() {
+  document.getElementById("genre").innerHTML = genre.genTextAndAdvance();
+  if (genre.shouldPause) {
+    setTimeout(typegenre, pause);
+  } else {
+    setTimeout(typegenre, speedFast);
+  }
+}
+
+function freezeGenre() {
+  genre.setFreeze = true;
+}
+
+function defreezeGenre() {
+  genre.setFreeze = false;
+}
+
 typewords();
+typegenre();
 </script>
 
 </body>
