--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ class Expandable {
 }
 
 text = new Text();
-genres = ["Jamiroquai (funk) and ...", "Kendrick Lamar + 21 Savage + Tyga (hip-hop) and ...", "The Lumineers (folk rock) and ...", "Kenshi Yonezu (j-pop) and ...", "Vampire Weekend (alter rock) and ..."];
+genres = ["Jamiroquai (funk) and ...", "Kendrick Lamar + 21 Savage + Tyga (hip-hop) and ...", "The Lumineers (folk rock) and ...", "Kenshi Yonezu + Amier + Aimyon (j-pop) and ...", "Vampire Weekend (alter rock) and ..."];
 genre = new Expandable(genres, genres[0].length - 1);
 games = ["Dragon Age series and ...", "Elder Scrolls series and ...", "GTA series and ...", "The Sims series and ...", "Nobunaga's Ambition series and ...", "Cities: Skylines and ...", "Mount and Blade and ..."];
 game = new Expandable(games, games[0].length - 1);
